--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,10 @@ description = ""
 authors = ["Curve.fi"]
 readme = "README.md"
 
+[tool.black]
+line-length = 120
+target_version = ['py310']
+
 [tool.poetry.dependencies]
 python = "3.12.4"
 vyper = "0.4.0"
