--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -30,10 +30,15 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
+      # install poetry to allow cacheing
+      - name: Install poetry
+        run: pipx install poetry
+
       - name: Setup Python 3.12.4
         uses: actions/setup-python@v5
         with:
           python-version: 3.12.4
+          cache: 'poetry'
 
       - name: Install Requirements
         run: |
