re-add poetry cacheing (testing ci)

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -30,21 +30,19 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
+      # install poetry to allow cacheing
+      - name: Install poetry
+        run: pipx install poetry
+
       - name: Setup Python 3.12.6
         uses: actions/setup-python@v5
         with:
           python-version: 3.12.6
-
-      - name: Install Requirements
-        run: |
-          pip install poetry==1.8.1
-          poetry config virtualenvs.in-project true
-          poetry install
+          cache: 'poetry'
 
       - name: Run Tests
         env:
           ETH_RPC_URL: ${{ secrets.ETH_RPC_URL }}
           ETHERSCAN_API_KEY: ${{ secrets.ETHERSCAN_API_KEY }}
         run: |
-          source .venv/bin/activate
-          pytest --numprocesses=auto
+          poetry run pytest --numprocesses=auto
