pytest flag fix

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -46,4 +46,4 @@ jobs:
           ETH_RPC_URL: ${{ secrets.ETH_RPC_URL }}
           ETHERSCAN_API_KEY: ${{ secrets.ETHERSCAN_API_KEY }}
         run: |
-          poetry run pytest --numprocesses=auto
+          poetry run pytest -n=auto
