--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,17 +11,18 @@ line-length = 79
 target_version = ['py312']
 
 [tool.poetry.dependencies]
-python = "3.12.4"
+python = "^3.12.6"
+poetry = "^1.8.3"
 vyper = "0.4.0"
 titanoboa = { git = "https://github.com/vyperlang/titanoboa.git", branch = "master" }
 snekmate = "0.1.0"
 
 [tool.poetry.group.dev.dependencies]
-pytest = "^8.2.2"
-pytest-xdist = "^3.6.1"
 mamushi = "0.0.4a1"
 pre-commit = "^3.8.0"
 black = "24.8.0"
+pytest = "^8.2.2"
+pytest-xdist = "^3.6.1"
 
 [tool.poetry.group.scripts.dependencies]
 tqdm = "^4.66.5"
