--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,6 @@ version = "0.1.0"
 description = ""
 authors = ["Curve.fi"]
 readme = "README.md"
-package-mode = false
 
 [tool.black]
 line-length = 100
@@ -14,11 +13,11 @@ target_version = ['py312']
 python = "^3.12.6"
 poetry = "^1.8.3"
 vyper = "0.4.0"
-titanoboa = { git = "https://github.com/vyperlang/titanoboa.git", branch = "master" }
+titanoboa = { git = "https://github.com/vyperlang/titanoboa.git", rev = "4768207288ec8fb23a4817ae193bd707ab9d1e8f" }
 snekmate = "0.1.0"
 
 [tool.poetry.group.dev.dependencies]
-mamushi = "0.0.4a1"
+mamushi = "0.0.4a3"
 pre-commit = "^3.8.0"
 black = "24.8.0"
 pytest = "^8.2.2"
