chore: use ruff (#24)
* chore: ruff

* chore: bump pre-commit, redo ci

* chore: bump pre-commit, redo ci

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -4,11 +4,11 @@ on: [push]
 
 jobs:
   # Linting with Pre-commit
-  lint:
+  ruff:
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v4
+      - uses: astral-sh/ruff-action@v1
 
       - name: Set up Python 3.12.6
         uses: actions/setup-python@v5
