--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,8 +23,10 @@ dev-dependencies = [
     "pre-commit==3.8.0",
     "ruff==0.6.9",
     "pytest==8.2.2",
-    "pytest-xdist==3.6.1",
     "plyvel-ci==1.5.1",
+    "curve-dao>=1.0.0",
+    "jupyter>=1.0.0",
+    "python-dotenv>=1.0.1"
 ]
 
 [tool.ruff]
