--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,5 +32,5 @@ dev-dependencies = [
 [tool.ruff]
 line-length = 100
 
-[build-system]
-requires = ["setuptools", "wheel"]
+# [build-system]
+# requires = ["setuptools", "wheel"]
